--- a/story.html
+++ b/story.html
@@ -15,7 +15,7 @@
 
         html, body, table {
             height: 100%;
-            width: 100%;
+            width: 600px;
             margin: 0;
             padding: 0;
             border: 0;
